--- a/webkinematik/Animation/Kurbel - zeitabhaengig.html
+++ b/webkinematik/Animation/Kurbel - zeitabhaengig.html
@@ -2,19 +2,18 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Kurbel</title>      
+    <title>Kurbel</title>
 </head>
 
 <body>
-    <h2>Kurbel</h2>             
+    <h2>Kurbel</h2>
     <canvas id="c" width="300" height="300" style="border-width:1px;border-style:solid"></canvas>
-  
-    <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
-    <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>    
+
+    <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
 
     <script>
 
-var cnv = document.getElementById('c'),
+let cnv = document.getElementById('c'),
     ctx = cnv.getContext('2d'),
 
     pi = Math.PI,
@@ -23,53 +22,52 @@ var cnv = document.getElementById('c'),
     phi = 0,  // Laufvariable
 
     T = 6,  // Periodendauer
-    omega = 2*pi/T,  // Winkelgeschwindigkeit  
-    
+    omega = 2*pi/T,  // Winkelgeschwindigkeit
+
     t0 = false,  // Startzeit
 
     mec = {
         get ephi() { return {x:Math.cos(phi), y:Math.sin(phi)}; },
         get A() { return {x:l*this.ephi.x, y:l*this.ephi.y}; }
-    },  
+    },
 
     // definiert Kurbel als g2() Objekt
-    Kurbel = g2(),  
+    Kurbel = g2(),
 
     // baut und initialisiert statische Umgebung
-    world = g2().clr()          // leert das Canvas
-                .cartesian()    // schaltet kartesische Koordinaten ein
-                .pan(150, 150)  // verschiebt den Nullpunkt   
-                .use(Kurbel)    // referenziert dynamisches Kurbel-Objekt
-                .use("nodfix")  // statisches Festlager im Ursprung
+    world = g2().clr()                                  // leert das Canvas
+                .view({x:150,y:150,cartesian:true})     // schaltet kartesische Koordinaten ein & verschiebt den Nullpunkt
+                .use({grp:Kurbel})                      // referenziert dynamisches Kurbel-Objekt
+                .nodfix()                               // statisches Festlager im Ursprung
     ;
 
-function position(t) {    
+function position(t) {
     // aktualisiet phi
     phi = omega*t;
 
     // baut dynamische Kurbel auf
     Kurbel.del()
-          .lin(0, 0, mec.A.x, mec.A.y, {lw:3})
-          .use("nod", mec.A);
-}        
+          .lin({x1:0, y1:0, x2:mec.A.x, y2:mec.A.y, lw:3})
+          .nod(mec.A);
+}
 
 function render(time) {
     // initialisiert Startzeit falls das noch nicht passiert ist
-    if (!t0) 
+    if (!t0)
         t0 = time;
-    
+
     // aktualisiere Position mit übernahme der mom. Animationszeit
-    position((time-t0)/1000);  
+    position((time-t0)/1000);
 
     // rendert world in den Context
-    world.exe(ctx); 
+    world.exe(ctx);
 
     // asynchroner callback von render()
     requestAnimationFrame(render);
 }
 
 // startet die Animation die anschließend über callbacks weiterläuft
-requestAnimationFrame(render);
+render();
 
     </script>
 </body>
