--- a/webkinematik/Animation/Kurbel.html
+++ b/webkinematik/Animation/Kurbel.html
@@ -2,19 +2,18 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Kurbel</title>      
+    <title>Kurbel</title>
 </head>
 
 <body>
-    <h2>Kurbel</h2>             
+    <h2>Kurbel</h2>
     <canvas id="c" width="300" height="300" style="border-width:1px;border-style:solid"></canvas>
-  
-    <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
-    <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>    
+
+    <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
 
     <script>
 
-var cnv = document.getElementById('c'),
+let cnv = document.getElementById('c'),
     ctx = cnv.getContext('2d'),
 
     pi = Math.PI,
@@ -26,33 +25,33 @@ var cnv = document.getElementById('c'),
     mec = {
         get ephi() { return {x:Math.cos(phi), y:Math.sin(phi)}; },
         get A() { return {x:l*mec.ephi.x, y:l*mec.ephi.y}; }
-    },  
- 
+    },
+
     Kurbel = g2(),  // definiert Kurbel als g2() Objekt
 
     // baut und initialisiert statische Umgebung
-    world = g2().clr().cartesian()
-                .pan(150, 150) // Nullpunkt verschoben   
-                .use(Kurbel)
-                .use("nodfix")
+    world = g2().clr()                                  // leert das Canvas
+                .view({x:150,y:150,cartesian:true})     // schaltet kartesische Koordinaten ein & verschiebt den Nullpunkt
+                .use({grp:Kurbel})                      // referenziert dynamisches Kurbel-Objekt
+                .nodfix()                               // statisches Festlager im Ursprung
     ;
 
 function position() {
     // baut dynamische Kurbel auf
     Kurbel.del()
-          .lin(0, 0, mec.A.x, mec.A.y, {lw:3})
-          .use("nod", mec.A);
-    
+          .lin({x1:0, y1:0, x2:mec.A.x, y2:mec.A.y, lw:3})
+          .nod(mec.A);
+
     // inkrementiert phi
-    phi += pi/180; 
-}        
+    phi += pi/180;
+}
 
 function render() {
     // aktualisiere Position
-    position();  
+    position();
 
     // rendert world in den Context
-    world.exe(ctx); 
+    world.exe(ctx);
 
     // asynchroner callback von render(), keine Rekursion!
     requestAnimationFrame(render);
