--- a/webkinematik/Animation/Rad - blank.html
+++ b/webkinematik/Animation/Rad - blank.html
@@ -2,34 +2,34 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Rad</title>      
+    <title>Rad</title>
 </head>
 
 <body>
-    <h2>Rad</h2>             
+    <h2>Rad</h2>
     <canvas id="c" width="900" height="150" style="border-width:1px;border-style:solid"></canvas>
-  
-    <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
-    <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>    
+
+    <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
+    
 
     <script>
 
-var cnv = document.getElementById('c'),
+let cnv = document.getElementById('c'),
     ctx = cnv.getContext('2d'),
 
-    pi = Math.PI
-    
-    a = 0.5,    // Beschleunigung [m/s^2]
+    pi = Math.PI,
+
+    a = 0.5    // Beschleunigung [m/s^2]
     // ...
 
     ;
 
 function position(t) {
 // ...
-}        
+}
 
 function render(time) {
-    if (!t0 /* ... */)  
+    if (!t0 /* ... */)
         t0 = time;
 
     // ...
