--- a/webkinematik/Animation/Rad.html
+++ b/webkinematik/Animation/Rad.html
@@ -2,23 +2,23 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Rad</title>      
+    <title>Rad</title>
 </head>
 
 <body>
-    <h2>Rad</h2>             
+    <h2>Rad</h2>
     <canvas id="c" width="900" height="150" style="border-width:1px;border-style:solid"></canvas>
-  
-    <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
-    <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>    
+
+    <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
+    
 
     <script>
 
-var cnv = document.getElementById('c'),
+let cnv = document.getElementById('c'),
     ctx = cnv.getContext('2d'),
 
     pi = Math.PI
-    
+
     a = 0.5,    // Beschleunigung [m/s^2]
     v0 = 0,     // Anfangsgeschwindigkeit [m/s]
     s0 = 0.05,  // Anfangsstrecke [m]
@@ -32,35 +32,35 @@ var cnv = document.getElementById('c'),
     },
 
     maxs = cnv.width + mec.R,
- 
+
     wheel = g2(),
-    world = g2().clr().cartesian()
-                .use(wheel)
-                .ground([0,20, cnv.width,20], false, {h:10})
+    world = g2().clr().view({cartesian:true})
+                .use({grp:wheel})
+                .ground({pts:[0,20, cnv.width,20], closed:false, h:10})
     ;
 
 function position(t) {
     s = (0.5*a*t*t + v0*t + s0)*1000; // s(t) in [mm]
 
-    wheel.del()   
-         .pulley2(mec.A, mec.R)
-         .use("nod", mec.A)
-}        
+    wheel.del()
+         .pulley2({...mec.A, r:mec.R})
+         .nod(mec.A)
+}
 
 function render(time) {
-    /** Starte Animation (neu) durch Zuweisung t0 = time wenn t0 = false ist, 
-     *  oder wenn die Strecke x groeßer ist als die Canvasbreite + Radius des Rads 
+    /** Starte Animation (neu) durch Zuweisung t0 = time wenn t0 = false ist,
+     *  oder wenn die Strecke x groeßer ist als die Canvasbreite + Radius des Rads
      *  (Rad ist nicht mehr zu sehen weil es aus der Zeichenflaeche herausgerollt ist)
-     * */ 
-    if (!t0 || s > maxs)  
+     * */
+    if (!t0 || s > maxs)
         t0 = time;
 
     position((time-t0)/1000);
-    world.exe(ctx); 
+    world.exe(ctx);
     requestAnimationFrame(render);
 }
 
-requestAnimationFrame(render);
+render();
 
     </script>
 </body>
