--- a/webkinematik/Grafik/g2-Fachwerk.html
+++ b/webkinematik/Grafik/g2-Fachwerk.html
@@ -6,33 +6,33 @@
 
 <body>
   <canvas id="c" width="801" height="501" style="border: 1px solid #4D4E53;border-radius: 2px;"></canvas>
-  <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
+  <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
   <script>
 
-var ctx = document.getElementById("c").getContext("2d"),
+let ctx = document.getElementById("c").getContext("2d"),
     g = g2(),
-    nod = g2().cir(0, 0, 5, {ls:"#4f4f4f" ,fs:"#d0d0d0"}),
-    nodfix = g2().ply([-10,-15,0,0,10,-15], false, {ls:"#4f4f4f" ,fs:"#c7c7c7"}).cir(0, 0, 5, {ls:"#4f4f4f" ,fs:"#d0d0d0"}),
-    nodflt = g2().ply([-10,-15,0,0,10,-15], true, {ls:"#4f4f4f" ,fs:"#c7c7c7"}).lin(-11, -20, 11, -20, {ls:"#747474", lw:5}).cir(0, 0, 5, {ls:"#4f4f4f" ,fs:"#d0d0d0"})
+    nod = g2().cir({x:0, y:0, r:5, ls:"#4f4f4f" ,fs:"#d0d0d0"}),
+    nodfix = g2().ply({pts:[-10,-15,0,0,10,-15], closed:false, ls:"#4f4f4f" ,fs:"#c7c7c7"}).cir({x:0, y:0, r:5, ls:"#4f4f4f" ,fs:"#d0d0d0"}),
+    nodflt = g2().ply({pts:[-10,-15,0,0,10,-15], closed:true, ls:"#4f4f4f" ,fs:"#c7c7c7"}).lin({x1:-11, y1:-20, x2:11, y1:-20, ls:"#747474", lw:5}).cir({x:0, y:0, r:5, ls:"#4f4f4f" ,fs:"#d0d0d0"})
 ;
-    
-g2.symbol.arrow = g2().ply([50,0, 10,0, 10,3, 5,0, 10,-3, 10,0], true, {ls:"crimson" ,fs:"crimson", lw:3});
 
-g.cartesian().grid()
- .pan(240, 200)
- .ply([0,0,300,0,200,100,0,100],true,{ls:"#747474" , lw:5, lj:"round"})
- .ply([0,0,100,100,100,0,200,100,200,0],false,{ls:"#747474" , lw:5, lj:"round"})
- .use("arrow", {x:200, y:100})
- .use("arrow", {x:100, y:100, w:Math.PI/2})
- .use("arrow", {x:300, y:-50, w:Math.PI/2}) 
- .use(nod, {x:100, y:0})
- .use(nod, {x:200, y:0})
- .use(nod, {x:300, y:0})
- .use(nod, {x:100, y:100})
- .use(nod, {x:200, y:100})
- .use(nodfix, {x:0, y:0}).txt("A",-20,0)
- .use(nodflt, {x:0, y:100, w:-Math.PI/2}).txt("B",0,120) 
- .exe(ctx)    
+g2.symbol.arrow = g2().ply({pts:[50,0, 10,0, 10,3, 5,0, 10,-3, 10,0], closed:true, ls:"crimson" ,fs:"crimson", lw:3});
+
+g.grid()
+ .view({x:240,y:240,cartesian:true})
+ .ply({pts:[0,0,300,0,200,100,0,100],closed:true,ls:"#747474" , lw:5, lj:"round"})
+ .ply({pts:[0,0,100,100,100,0,200,100,200,0],closed:false,ls:"#747474" , lw:5, lj:"round"})
+ .use({grp:"arrow", x:200, y:100})
+ .use({grp:"arrow", x:100, y:100, w:Math.PI/2})
+ .use({grp:"arrow", x:300, y:-50, w:Math.PI/2})
+ .use({grp:nod, x:100, y:0})
+ .use({grp:nod, x:200, y:0})
+ .use({grp:nod, x:300, y:0})
+ .use({grp:nod, x:100, y:100})
+ .use({grp:nod, x:200, y:100})
+ .use({grp:nodfix, x:0, y:0}).txt({str:"A",x:-20,y:0})
+ .use({grp:nodflt, x:0, y:100, w:-Math.PI/2}).txt({str:"B",x:0,y:120})
+ .exe(ctx)
 
   </script>
 </body>
