--- a/webkinematik/Grafik/mec-symbol_overview.html
+++ b/webkinematik/Grafik/mec-symbol_overview.html
@@ -6,26 +6,26 @@
 
 <body>
   <canvas id="c" width="680" height="150" style="border-width:1px;border-style:solid"></canvas>
-  <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
-  <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>
+  <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
+  
   <script>
 
-var cnv = document.getElementById("c"),
+let cnv = document.getElementById("c"),
     ctx = cnv.getContext("2d"),
     g = g2();
-    
 
-g.cartesian()
- .use("origin",{x:20,y:80}) .label("origin","s",-25)
- .use("nod",{x:100,y:80}) .label("nod","s",-25)
- .use("dblnod",{x:180,y:80}) .label("dblnod","s",-25)
- .use("nodfix",{x:260,y:80}) .label("nodfix","s",-25)
- .use("dblnodfix",{x:340,y:80}) .label("dblnodfix","s",-25)
- .use("nodflt",{x:420,y:80}) .label("nodflt","s",-25)
- .use("dblnodflt",{x:500,y:80}) .label("dblnodflt","s",-25)
- .use("pol",{x:580,y:80}) .label("pol","s",-25)
- .use("gnd",{x:660,y:80}) .label("gnd","s",-25)
- .exe(ctx)    
+
+g.txt({str:"deprecated", x:100,y:75,font:"normal 30px serif"})
+//  .use({grp:"origin",x:20,y:80}) .label({str:"origin",loc:"s",off:-25})
+//  .use({grp:"nod",x:100,y:80}) .label({str:"nod",loc:"s",off:-25})
+//  .use({grp:"dblnod",x:180,y:80}) .label({str:"dblnod",loc:"s",off:-25})
+//  .use({grp:"nodfix",x:260,y:80}) .label({str:"nodfix",loc:"s",off:-25})
+//  .use({grp:"dblnodfix",x:340,y:80}) .label({str:"dblnodfix",loc:"s",off:-25})
+//  .use({grp:"nodflt",x:420,y:80}) .label({str:"nodflt",loc:"s",off:-25})
+//  .use({grp:"dblnodflt",x:500,y:80}) .label({str:"dblnodflt",loc:"s",off:-25})
+//  .use({grp:"pol",x:580,y:80}) .label({str:"pol",loc:"s",off:-25})
+//  .use({grp:"gnd",x:660,y:80}) .label({str:"gnd",loc:"s",off:-25})
+ .exe(ctx)
 
   </script>
 </body>
