--- a/webkinematik/Livedemos/cm-livedemo_g2-multi.html
+++ b/webkinematik/Livedemos/cm-livedemo_g2-multi.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <link href="https://gitcdn.xyz/repo/goessner/CodeMirror/master/theme/fh-do.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/codemirror/4.5.0/codemirror.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/lib/codemirror.css">
 </head>
 
 <body>
@@ -14,46 +15,45 @@
     <input id="reset" type="button" value="Reset" />
   </div>
   <textarea id="code" class="playable-code">
-g2().cartesian().grid()
-    .pan(240, 200)
-    .ply([0,0,300,0,200,100,0,100],true,{ls:"#747474" , lw:5, lj:"round"})
-    .ply([0,0,100,100,100,0,200,100,200,0],false,{ls:"#747474" , lw:5, lj:"round"})
-    .use("arrow", {x:200, y:100})
-    .use("arrow", {x:100, y:100, w:Math.PI/2})
-    .use("arrow", {x:300, y:-50, w:Math.PI/2}) 
-    .use(nod, {x:100, y:0})
-    .use(nod, {x:200, y:0})
-    .use(nod, {x:300, y:0})
-    .use(nod, {x:100, y:100})
-    .use(nod, {x:200, y:100})
-    .use(nodfix, {x:0, y:0})
-    .use(nodflt, {x:0, y:100, w:-Math.PI/2})
-    .exe(ctx)</textarea>
+const style = {ls:'#747474',lw:5,lj:'round'};
 
-  <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
-  <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/codemirror/4.5.0/codemirror.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/codemirror/4.5.0/mode/javascript/javascript.js"></script>
+g2().view({x:240, y: 200, cartesian: true}).grid()
+ .ply({pts:[0,0,300,0,200,100,0,100],closed:true,...style})
+ .ply({pts:[0,0,100,100,100,0,200,100,200,0],closed:false,...style})
+ .use({grp:"arrow",x:200,y:100})
+ .use({grp:"arrow",x:100,y:100,w:Math.PI/2})
+ .use({grp:"arrow",x:300,y:-50,w:Math.PI/2})
+ .use({grp:nod,x:100, y:0})
+ .use({grp:nod,x:200, y:0})
+ .use({grp:nod,x:300, y:0})
+ .use({grp:nod,x:100, y:100})
+ .use({grp:nod,x:200, y:100})
+ .use({grp:nodfix,x:0, y:0}).txt({str:"A",x:-20,y:0})
+ .use({grp:nodflt,x:0,y:100,w:-Math.PI/2}).txt({str:"B",x:0,y:120})
+ .exe(ctx)</textarea>
+
+  <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/lib/codemirror.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/mode/javascript/javascript.js"></script>
   <script>
 
-var canvas = document.getElementById("canvas");
-var ctx = canvas.getContext("2d");
-var reset = document.getElementById("reset");
-var edit = document.getElementById("edit");
-var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+let canvas = document.getElementById("canvas");
+let ctx = canvas.getContext("2d");
+let reset = document.getElementById("reset");
+let edit = document.getElementById("edit");
+let editor = CodeMirror.fromTextArea(document.getElementById("code"), {
   mode:  "javascript",
   lineNumbers: true,
   theme: "fh-do",
   styleActiveLine: true,
   matchBrackets: true,
 });
-var code = editor.getValue();
-var nod = g2().cir(0, 0, 5, {ls:"#4f4f4f" ,fs:"#d0d0d0"}),
-    nodfix = g2().ply([-10,-15,0,0,10,-15], false, {ls:"#4f4f4f" ,fs:"#c7c7c7"}).cir(0, 0, 5, {ls:"#4f4f4f" ,fs:"#d0d0d0"}),
-    nodflt = g2().ply([-10,-15,0,0,10,-15], true, {ls:"#4f4f4f" ,fs:"#c7c7c7"}).lin(-11, -20, 11, -20, {ls:"#747474", lw:5}).cir(0, 0, 5, {ls:"#4f4f4f" ,fs:"#d0d0d0"})   
-;
+let code = editor.getValue();
+const nod = g2().cir({x:0,y:0,r:5,ls:"#4f4f4f",fs:"#d0d0d0"}),
+    nodfix = g2().ply({pts:[-10,-15,0,0,10,-15],closed:false,ls:"#4f4f4f",fs:"#c7c7c7"}).cir({x:0,y:0,r:5,ls:"#4f4f4f",fs:"#d0d0d0"}),
+    nodflt = g2().ply({pts:[-10,-15,0,0,10,-15],closed:true,ls:"#4f4f4f",fs:"#c7c7c7"}).lin({x:-11,y1:-20,x2:11,y2:-20,ls:"#747474", lw:5}).cir({x:0,y:0,r:5,ls:"#4f4f4f",fs:"#d0d0d0"});
 
-g2.symbol.arrow = g2().ply([50,0, 10,0, 10,3, 5,0, 10,-3, 10,0], true, {ls:"crimson" ,fs:"crimson", lw:3});
+g2.symbol.arrow = g2().ply({pts:[50,0, 10,0, 10,3, 5,0, 10,-3, 10,0], closed:true,ls:"crimson" ,fs:"crimson", lw:3});
 
 function drawCanvas() {
   g2().del().clr().exe(ctx);
