--- a/webkinematik/Livedemos/cm-livedemo_mec_mark.html
+++ b/webkinematik/Livedemos/cm-livedemo_mec_mark.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <link href="https://gitcdn.xyz/repo/goessner/CodeMirror/master/theme/fh-do.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/codemirror/4.5.0/codemirror.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/lib/codemirror.css">
 </head>
 
 <body>
@@ -14,35 +15,35 @@
     <input id="reset" type="button" value="Reset" />
   </div>
   <textarea id="code" class="playable-code">
-g.cartesian()
- .arc(245,40,45,-Math.PI/6,4/3*Math.PI, {ls:"red"})
-    .mark("dot",["beg","mid","end"]) 
- .lin(20,40,150,50) 
-    .mark("arrow",[0,1/3,2/3,1],1) 
- .lin(40,90,170,70) 
-    .mark("arrow",1,1) 
-    .mark("tick",[1/4,1/2,3/4],1)
- .exe(ctx)</textarea>
+    g.view({cartesian:true})
+     .arc({x:245,y:40,r:45,w:-Math.PI/6,dw:4/3*Math.PI,ls:"red"})
+     .mark({mrk:"dot",loc:["beg","mid","end"],dir:1,fs:"black",ls:1})
+     .lin({x1:20,y1:40,x2:150,y2:50})
+     .mark({mrk:"tick",loc:[0,1/3,2/3,1],dir:1})
+     .vec({x1:40,y1:90,x2:170,y2:70})
+     .mark({mrk:"arrow",loc:1,dir:1})
+     .mark({mrk:"tick",loc:[1/4,1/2,3/4],dir:1})
+     .exe(ctx)
+</textarea>
 
-  <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
-  <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/codemirror/4.5.0/codemirror.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/codemirror/4.5.0/mode/javascript/javascript.js"></script>
+ <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/lib/codemirror.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/mode/javascript/javascript.js"></script>
   <script>
 
-var canvas = document.getElementById("canvas");
-var ctx = canvas.getContext("2d");
-var reset = document.getElementById("reset");
-var edit = document.getElementById("edit");
-var g = g2();
-var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+let canvas = document.getElementById("canvas");
+let ctx = canvas.getContext("2d");
+let reset = document.getElementById("reset");
+let edit = document.getElementById("edit");
+let g = g2();
+let editor = CodeMirror.fromTextArea(document.getElementById("code"), {
   mode:  "javascript",
   lineNumbers: true,
   theme: "fh-do",
   styleActiveLine: true,
   matchBrackets: true,
 });
-var code = editor.getValue();
+let code = editor.getValue();
 
 function drawCanvas() {
   g.del().clr();
