--- a/webkinematik/Livedemos/cm-livedemo_mec_symbols.html
+++ b/webkinematik/Livedemos/cm-livedemo_mec_symbols.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
   <link href="https://gitcdn.xyz/repo/goessner/CodeMirror/master/theme/fh-do.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/codemirror/4.5.0/codemirror.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/lib/codemirror.css">
 </head>
 
 <body>
@@ -14,37 +15,34 @@
     <input id="reset" type="button" value="Reset" />
   </div>
   <textarea id="code" class="playable-code">
-g.cartesian()
- .use("origin",{x:20,y:80})     .label("origin","s",25)
- .use("nod",{x:100,y:80})       .label("nod","s",25)
- .use("dblnod",{x:180,y:80})    .label("dblnod","s",25)
- .use("nodfix",{x:260,y:80})    .label("nodfix","s",25)
- .use("dblnodfix",{x:340,y:80}) .label("dblnodfix","s",25)
- .use("nodflt",{x:420,y:80})    .label("nodflt","s",25)
- .use("dblnodflt",{x:500,y:80}) .label("dblnodflt","s",25)
- .use("pol",{x:580,y:80})       .label("pol","s",25)
- .use("gnd",{x:660,y:80})       .label("gnd","s",25)
- .exe(ctx)</textarea>
+g.view({cartesian:true})
+    .origin({x: 20,y:75}).label({str:'origin',  loc:'s', off:25})
+    .nod(   {x:120,y:75}).label({str:'nod',     loc:'s', off:25})
+    .dblnod({x:220,y:75}).label({str:'dblnod',  loc:'s', off:25})
+    .nodfix({x:320,y:75}).label({str:'nodfix',  loc:'s', off:25})
+    .nodflt({x:420,y:75}).label({str:'nodflt',  loc:'s', off:25})
+    .pol(   {x:520,y:75}).label({str:'pol',     loc:'s', off:25})
+    .gnd(   {x:620,y:75}).label({str:'gnd',     loc:'s', off:25})
+    .exe(ctx)</textarea>
 
-  <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
-  <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/codemirror/4.5.0/codemirror.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/codemirror/4.5.0/mode/javascript/javascript.js"></script>
+  <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/lib/codemirror.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/mode/javascript/javascript.js"></script>
   <script>
 
-var canvas = document.getElementById("canvas");
-var ctx = canvas.getContext("2d");
-var reset = document.getElementById("reset");
-var edit = document.getElementById("edit");
-var g = g2();
-var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+let canvas = document.getElementById("canvas");
+let ctx = canvas.getContext("2d");
+let reset = document.getElementById("reset");
+let edit = document.getElementById("edit");
+let g = g2();
+let editor = CodeMirror.fromTextArea(document.getElementById("code"), {
   mode:  "javascript",
   lineNumbers: true,
   theme: "fh-do",
   styleActiveLine: true,
   matchBrackets: true,
 });
-var code = editor.getValue();
+let code = editor.getValue();
 
 function drawCanvas() {
   g.del().clr();
