--- a/webkinematik/Livedemos/cm-livedemo_mec_vec.html
+++ b/webkinematik/Livedemos/cm-livedemo_mec_vec.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link href="https://gitcdn.xyz/repo/goessner/CodeMirror/master/theme/fh-do.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/codemirror/4.5.0/codemirror.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/lib/codemirror.css">
 </head>
 
 <body>
@@ -14,33 +14,32 @@
     <input id="reset" type="button" value="Reset" />
   </div>
   <textarea id="code" class="playable-code">
-var A = {x:10, y:10};
+let A = {x:10, y:10};
 
-g.cartesian()
- .vec(A,{x:90, y:10})
- .vec(A,{dx:70, dy:70})
- .vec(A,{r:80, w:Math.PI/2})
+g.view({cartesian:true})
+ .vec({x1:A.x,y1:A.y,x2:90,y2:10})
+ .vec({x1:A.x,y1:A.y,x2:80,y2:70,lw:0.5})
+ .vec({x1:A.x,y1:A.y,x2:10,y2:90})
  .exe(ctx)</textarea>
 
-  <script src="https://gitcdn.xyz/repo/goessner/g2/master/g2.min.js"></script>
-  <script src="https://gitcdn.xyz/repo/goessner/g2-mec/master/g2.mec.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/codemirror/4.5.0/codemirror.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/codemirror/4.5.0/mode/javascript/javascript.js"></script>
+ <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/lib/codemirror.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/codemirror@5.40.2/mode/javascript/javascript.js"></script>
   <script>
 
-var canvas = document.getElementById("canvas");
-var ctx = canvas.getContext("2d");
-var reset = document.getElementById("reset");
-var edit = document.getElementById("edit");
-var g = g2();
-var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+let canvas = document.getElementById("canvas");
+let ctx = canvas.getContext("2d");
+let reset = document.getElementById("reset");
+let edit = document.getElementById("edit");
+let g = g2();
+let editor = CodeMirror.fromTextArea(document.getElementById("code"), {
   mode:  "javascript",
   lineNumbers: true,
   theme: "fh-do",
   styleActiveLine: true,
   matchBrackets: true,
 });
-var code = editor.getValue();
+let code = editor.getValue();
 
 function drawCanvas() {
   g.del().clr();
