updated to work with g2 version 2.5.0

--- a/webkinematik/Livedemos/cm-livedemo_mec_load.html
+++ b/webkinematik/Livedemos/cm-livedemo_mec_load.html
@@ -17,7 +17,7 @@
 g.view({cartesian:true})
  .load({pts:[20,20, 100,80, 160,80, 160,20], spacing:20})
  .exe(ctx)</textarea>
- <div style="padding-top:.5rem;">Vorsicht! Einige Werte für <code>spacing</code> (z.B. 0) können dazu führen, dass der Frame nicht mehr reagiert!</div>
+ <div style="padding-top:.5rem;"><span style="color:red">Vorsicht!</span> Einige Werte für <code>spacing</code> (z.B. 0) können dazu führen, dass der Browsertab nicht mehr reagiert!</div>
 
 
   <script src="https://gitcdn.xyz/repo/goessner/g2/master/src/g2.js"></script>
