removed outdated files

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset='utf-8'>
+    <meta http-equiv="refresh" content="0; URL=https://jauhl.github.io/mecEdit/mecEdit.html"> 
 </head>
 
 <body>
-  <h2>GitHub Pages of jauhl</h2>
+  <!-- <h2>GitHub Pages of jauhl</h2>
   <a href="./mecapp/mecindex.html">Mechanismentechnik - App<a>
   <p></p>
   <a href="./planar4bars.html">highly experimental multifunctional app for analyzing planar 4-bar mechanisms<a>   
@@ -15,7 +16,7 @@
   <p></p>
   <a href="./RETS2_v1.0_webpraesentation.html">FlySim Fünfgelenk<a>   
   <p></p>
-  <a href="./mecA221m.html">Schließmechanismus Arburg A221M<a>        
+  <a href="./mecA221m.html">Schließmechanismus Arburg A221M<a>         -->
 </body>
 
 </html>
